--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://JoseFuentes-Dev.github.io/patu-hogar-app", 
+  "homepage": "https://JoseFuentes-Dev.github.io/patu-hogar-app",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "aos": "^2.3.4",
     "framer-motion": "^11.11.4",
     "prop-types": "^15.8.1",
